Fix incorrect styling on mobile

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -229,19 +229,26 @@ table tr {
 
 .col-md-4 {
   float: left;
-  width: 40%;
+  width: 60%;
 
   margin-bottom: 15px;
+}
 
-  @media screen and (min-width: 620px) {
-    width: 30%;
+  @media screen and (min-width: 619px) {
+    .col-md-4 {
+      width: 30%;
+    }
   }
   @media screen and (min-width: 900px) {
-    width: 20%;
+    .col-md-4 {
+      width: 20%;
+    }
   }
   @media screen and (min-width: 1600px) {
-    width: 10%;
+    .col-md-4 {
+      width: 10%;
+    }
   }
-}
+
 
 
